--- a/httpdocs/index.html
+++ b/httpdocs/index.html
@@ -1487,7 +1487,7 @@
 				<div class="col-sm-12 col-md-5 mb-30">
 					<!-- Title -->
 					<h3 class="title m_title">
-						IG Elephant Group
+						IG Elephant Group :)
 					</h3>
 
 					<div class="sbs">
