--- a/httpdocs/kit-digital.html
+++ b/httpdocs/kit-digital.html
@@ -258,14 +258,6 @@
 			<div class="ph-content-wrap d-flex">
 				<div class="container align-self-center">
 					<div class="row">
-						<div class="col-sm-12 col-md-6 col-lg-6">						
-							<!--<div class="clearfix"></div>-->
-							<!-- image -->
-							<img src="images/acelera-pyme.jpeg">
-    					<!--/ image  -->
-						</div>
-						<!--/ col-sm-12 col-md-6 col-lg-6 -->
-
 						<div class="col-sm-12 col-md-6 col-lg-6">
 							<!-- Sub-header titles -->
 							<div class="subheader-titles">
@@ -277,6 +269,15 @@
 						<!--/ col-sm-12 col-md-6 col-lg-6 -->
 					</div>
 					<!--/ row -->
+					<div class="row">
+						<div class="col-sm-12 col-md-6 col-lg-6">						
+								<!--<div class="clearfix"></div>-->
+								<!-- image -->
+								<img src="images/acelera-pyme.jpeg">
+							<!--/ image  -->
+						</div>
+						<!--/ col-sm-12 col-md-6 col-lg-6 -->
+					</div>
 				</div>
 				<!--/ .container .align-self-center -->
 			</div>
