Afegit text a sebastian/flexygo

--- a/httpdocs/kit-digital.html
+++ b/httpdocs/kit-digital.html
@@ -542,7 +542,7 @@
                                         </a>
                                         <!--/ Image link -->
                                         <p>Disponer de un análisis inteligente de la información en cualquier negocio es imprescindible para tomar decisiones con la máxima precisión y de forma rápida. Eso es algo que no siempre se consigue debido a la gran cantidad de información con la que debe tratar una empresa en la actualidad. En ocasiones la menos relevante prevalece sobre la que realmente es imprescindible y en esos casos cualquier empresa está destina a cometer series errores su gestión.</p>
-                                        <p>Como solución a esta necesidad nos apoyamos en Microsoft Power BI y de una serie de cuadros de mando estandarizados que cubrirán las principales necesidades en este aspecto. Power BI es un referente mundial y la plataforma más intuitiva de analisis inteligente. Totalmente escalable, puede adaptarse a cualquier formato de datos, crear informes complejos y publicarlos como quiera.</p>
+                                        <p>Como solución a esta necesidad nos apoyamos en Microsoft Power BI y de una serie de cuadros de mando estandarizados que cubrirán las principales necesidades en este aspecto. Power BI es un referente mundial y la plataforma más intuitiva de análisis inteligente. Totalmente escalable, puede adaptarse a cualquier formato de datos, crear informes complejos y publicarlos como quiera.</p>
                                         <p><b>Compras y pedidos</b>: visión global de las compras de la empresa de fácil visualización.</p>
                                         <p><b>Ventas y facturación</b>: información sobre pedidos pendientes, albaranes no facturados, ventas.. todo de forma organizada.</p>
                                         <p><b>Finanzas y contabilidad</b>: visión de la información relativa al balance de situación, cuenta de resultados o gráficos de tendencias.</p>
@@ -605,9 +605,19 @@
                                         <img src="images/servicios/ahora-SAT.png" class="alignright" width="350" height="auto" alt="ahora sat" title="ahora sat">
                                         <!--/ Image -->
                                         <!--/ Image link -->
-                                        <p>El SAT de AHORA (servicio asistencia técnica) es la app diseñada para smarthphones o tablet en la que tus técnicos tendrán acceso a toda la información de sus tareas e intervenciones externas.</p>
-                                        <p>A través de nuestra aplicación, tu equipo técnico podrá llevar a cabo las gestiones pertinentes desde cualquier dispositivo móvil, ya sea Android o iOS. Y lo mejor…no necesitará estar conectada a Internet para funcionar.</p>
-                                        </p>
+                                        <p><strong>Sebastian</strong> es un<strong> portal del empleado</strong> que permite gestionar toda la información relativa a los recursos internos de la empresa, favoreciendo así, la comunicación entre el empleado y la organización.</p>
+                                        <p>Es el facilitador de la gestión administrativa relacionada con recursos humanos. La herramienta perfecta para crear una<strong> comunicación eficiente y continua</strong>, donde los contenidos siempre están vivos.</p>
+                                        <ul>
+                                            <li>Cada empleado tiene acceso a su información relevante como, por ejemplo, nóminas, resultados de evaluaciones de desempeño, CV y otros documentos de empresa.</li>
+                                            <li>Permite publicar noticias relacionadas con la organización y obtener información actualizada de quién las ha leído y su opinión sobre estas.</li>
+                                            <li>Facilita la información de cursos a empleados para que puedan suscribirse con un simple click.</li>
+                                            <li>Gracias a la Gestión Documental, permite estar informado de todos los procedimientos, del área del empleado o generales de la compañía.</li>
+                                            <li>Permite visualizar la estructura jerárquica de la compañía gracias al Organigrama interactivo.</li>
+                                            <li>El Gestor de Vacaciones y Permisos facilita una mayor organización del equipo. Con una interfaz muy intuitiva que incluye todos los datos, además de un flujo de aprobación muy sencillo.</li>
+                                            <li>Facilita la reserva de los recursos físicos de la empresa, tales como salas de reuniones, coches, ordenadores, tablets…</li>
+                                            <li>Posibilita gestionar fácilmente los partes de gastos y adjuntar los tickets en la herramienta para su contabilización.</li>
+                                        </ul>
+                                        <p>Y si quieres una aplicacion online perzonalidad desde el principio para ti podemos ayudarte tambien. Flexygo es la base en la que se cimineta Sebastian y otras aplicaciones de gestion de empresa online, con sus herramientas podemos hacer la aplicacion a medida de tus necesidades.</p>
                                         <!--/ Description -->
                                     </div>
                                     <!--/ Tab #6 -->
