--- a/httpdocs/kit-digital.html
+++ b/httpdocs/kit-digital.html
@@ -606,16 +606,15 @@
                                         <!--/ Image -->
                                         <!--/ Image link -->
                                         <p><strong>Sebastian</strong> es un<strong> portal del empleado</strong> que permite gestionar toda la información relativa a los recursos internos de la empresa, favoreciendo así, la comunicación entre el empleado y la organización.</p>
-                                        <p>Es el facilitador de la gestión administrativa relacionada con recursos humanos. La herramienta perfecta para crear una<strong> comunicación eficiente y continua</strong>, donde los contenidos siempre están vivos.</p>
                                         <ul>
-                                            <li>Cada empleado tiene acceso a su información relevante como, por ejemplo, nóminas, resultados de evaluaciones de desempeño, CV y otros documentos de empresa.</li>
-                                            <li>Permite publicar noticias relacionadas con la organización y obtener información actualizada de quién las ha leído y su opinión sobre estas.</li>
-                                            <li>Facilita la información de cursos a empleados para que puedan suscribirse con un simple click.</li>
-                                            <li>Gracias a la Gestión Documental, permite estar informado de todos los procedimientos, del área del empleado o generales de la compañía.</li>
-                                            <li>Permite visualizar la estructura jerárquica de la compañía gracias al Organigrama interactivo.</li>
-                                            <li>El Gestor de Vacaciones y Permisos facilita una mayor organización del equipo. Con una interfaz muy intuitiva que incluye todos los datos, además de un flujo de aprobación muy sencillo.</li>
-                                            <li>Facilita la reserva de los recursos físicos de la empresa, tales como salas de reuniones, coches, ordenadores, tablets…</li>
-                                            <li>Posibilita gestionar fácilmente los partes de gastos y adjuntar los tickets en la herramienta para su contabilización.</li>
+                                            <li class="kit">Cada empleado tiene acceso a su información relevante como, por ejemplo, nóminas, resultados de evaluaciones de desempeño, CV y otros documentos de empresa.</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">Permite publicar noticias relacionadas con la organización y obtener información actualizada de quién las ha leído y su opinión sobre estas.</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">Facilita la información de cursos a empleados para que puedan suscribirse con un simple click.</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">Gracias a la Gestión Documental, permite estar informado de todos los procedimientos, del área del empleado o generales de la compañía.</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">Permite visualizar la estructura jerárquica de la compañía gracias al Organigrama interactivo.</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">El Gestor de Vacaciones y Permisos facilita una mayor organización del equipo. Con una interfaz muy intuitiva que incluye todos los datos, además de un flujo de aprobación muy sencillo.</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">Facilita la reserva de los recursos físicos de la empresa, tales como salas de reuniones, coches, ordenadores, tablets…</li>
+                                            <li style="list-style: outside;" class="pt-10 pb-10">Posibilita gestionar fácilmente los partes de gastos y adjuntar los tickets en la herramienta para su contabilización.</li>
                                         </ul>
                                         <p>Y si quieres una aplicacion online perzonalidad desde el principio para ti podemos ayudarte tambien. Flexygo es la base en la que se cimineta Sebastian y otras aplicaciones de gestion de empresa online, con sus herramientas podemos hacer la aplicacion a medida de tus necesidades.</p>
                                         <!--/ Description -->
