+ info de las soluciones

--- a/httpdocs/kit-digital.html
+++ b/httpdocs/kit-digital.html
@@ -585,9 +585,15 @@
                                         <img src="images/servicios/ahora-tpv.png" class="alignleft" width="350" height="auto" alt="ahora sat" title="ahora sat">
                                         <!--/ Image -->
                                         <!--/ Image link -->
-                                        <p>La solución ideal para los pequeños negocios que desean una gestión unificada de la contabilidad, compras, ventas, stock y gestión documental.</p>
                                         <p>
-                                            Un potente ERP de rápida implantación, para pequeñas empresas, con el que llevar el control de tiendas, cajas, artículos, promociones, informes de ventas, proveedores... en definitiva, todo lo que necesita el pequeño negocio bajo una misma plataforma.
+                                            Ahora e-Factura permite reunir de forma sencilla aquellas facturas recientemente
+                                            actualizadas, pero todavía no convertidas a un formato de eFactura. También permite
+                                            realizar dichos procesos de conversión y envío, obedeciendo las preferencias
+                                            establecidas para el cliente de la factura. Finalmente, es posible programar el envío
+                                            automático de facturas, según una frecuencia definida por el usuario.
+                                        </p>
+                                        <p>
+                                            La aplicacion funciona con AHORA ERP, un potente ERP para pequeñas empresas que se adapta a sus necesidades.
                                         </p>
                                         <!--/ Description -->
                                     </div>
@@ -596,7 +602,7 @@
                                     <div class="tab-pane fade" id="tabs_6">
                                         <!-- Title -->
                                         <h4>
-                                            Sebastian/Flexygo
+                                            Aplicacion online a medida - Flexygo
                                         </h4>
                                         <!--/ Title -->
                                         <!-- Description -->
@@ -605,18 +611,32 @@
                                         <img src="images/servicios/ahora-SAT.png" class="alignright" width="350" height="auto" alt="ahora sat" title="ahora sat">
                                         <!--/ Image -->
                                         <!--/ Image link -->
-                                        <p><strong>Sebastian</strong> es un<strong> portal del empleado</strong> que permite gestionar toda la información relativa a los recursos internos de la empresa, favoreciendo así, la comunicación entre el empleado y la organización.</p>
-                                        <ul>
-                                            <li class="kit">Cada empleado tiene acceso a su información relevante como, por ejemplo, nóminas, resultados de evaluaciones de desempeño, CV y otros documentos de empresa.</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">Permite publicar noticias relacionadas con la organización y obtener información actualizada de quién las ha leído y su opinión sobre estas.</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">Facilita la información de cursos a empleados para que puedan suscribirse con un simple click.</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">Gracias a la Gestión Documental, permite estar informado de todos los procedimientos, del área del empleado o generales de la compañía.</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">Permite visualizar la estructura jerárquica de la compañía gracias al Organigrama interactivo.</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">El Gestor de Vacaciones y Permisos facilita una mayor organización del equipo. Con una interfaz muy intuitiva que incluye todos los datos, además de un flujo de aprobación muy sencillo.</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">Facilita la reserva de los recursos físicos de la empresa, tales como salas de reuniones, coches, ordenadores, tablets…</li>
-                                            <li style="list-style: outside;" class="pt-10 pb-10">Posibilita gestionar fácilmente los partes de gastos y adjuntar los tickets en la herramienta para su contabilización.</li>
-                                        </ul>
-                                        <p>Y si quieres una aplicacion online perzonalidad desde el principio para ti podemos ayudarte tambien. Flexygo es la base en la que se cimineta Sebastian y otras aplicaciones de gestion de empresa online, con sus herramientas podemos hacer la aplicacion a medida de tus necesidades.</p>
+                                        <p><b>Flexygo</b> es una potente plataforma low-code para el desarrollo ágil de aplicaciones web y móvil con tecnología de despliegue continuo y filosofía DevOps.</p>
+                                        <p>Si buscas una aplicacion online a tu medida nosotros podemos hacer una con Flexygo para cualquier necesidad de tu empresa. Ademas flexygo tiene la posibilidad de <b>conectarse a diferentes aplicaciones:</b> ERP como SAGE o AHORA, Office365, MailChimp, PowerBi y mas.</p>
+                                        <p>Gestion de documentos, recursos humanos, control de presencia, logistica, planificadores,organigramas. Flexygo se puede adaptar a cualquiera de tus necesidades.</p>
+
+                                        <!-- Title -->
+                                        <h4>
+                                            Sebastian
+                                        </h4>
+                                        <!--/ Title -->
+                                        <!-- Description -->
+                                        <!-- Image link -->
+                                        <!-- Image right aligned-->
+                                        <img src="images/servicios/ahora-SAT.png" class="alignright" width="350" height="auto" alt="ahora sat" title="ahora sat">
+                                        <!--/ Image -->
+                                        <!--/ Image link -->
+                                        <p><b>Sebastian</b> es un<b> portal del empleado</b> que permite gestionar toda la información relativa a los recursos internos de la empresa, favoreciendo así, la comunicación entre el empleado y la organización.</p>
+                                        <p><b>Cada empleado tiene acceso a su información relevante</b> como, por ejemplo, nóminas, resultados de evaluaciones de desempeño, CV y otros documentos de empresa.</p>
+                                        <p><b>Permite publicar noticias</b> relacionadas con la organización y obtener información actualizada de quién las ha leído y su opinión sobre estas.</p>
+                                        <p>Facilita la información de <b>cursos a empleados</b> para que puedan suscribirse con un simple click.</p>
+                                        <p>Gracias a la <b>Gestión Documental</b>, permite estar informado de todos los procedimientos, del área del empleado o generales de la compañía.</p>
+                                        <p>Permite visualizar la estructura jerárquica de la compañía gracias al <b>Organigrama interactivo.</b></p>
+                                        <p>El <b>Gestor de Vacaciones y Permisos</b> facilita una mayor organización del equipo. Con una interfaz muy intuitiva que incluye todos los datos, además de un flujo de aprobación muy sencillo.</p>
+                                        <p>Facilita la <b>reserva de los recursos físicos de la empresa</b>, tales como salas de reuniones, coches, ordenadores, tablets…</p>
+                                        <p>Posibilita gestionar fácilmente los <b>partes de gastos</b> y adjuntar los tickets en la herramienta para su contabilización.</p>
+                                        <p>La aplicacion funciona con la plataforma Flexygo que nos permite <b>personalizar la aplicacion</b> con las necesidades de tu empresa.</p>
+                                        <!--/ Description -->
                                         <!--/ Description -->
                                     </div>
                                     <!--/ Tab #6 -->
