Puestos precios a kit digital

--- a/httpdocs/kit-digital.html
+++ b/httpdocs/kit-digital.html
@@ -497,6 +497,14 @@
                                                 Nuestro equipo está en constante formación y evolución para ofrecerle las mejores soluciones a
                                                 sus necesidades de identidad web corporativa.
                                             </p>
+                                            <p>
+                                                Utilizamos las últimas tecnologias web para adaptar su web a cualquier dispositivo y obtener la
+                                                mejor experiencia de usuario y funcionalidad.
+                                            </p>
+                                            <p>
+                                                Si necesita una plataforma para vender sus productos o servicios online, también diseñamos y
+                                                creamos su ecommerce ideal.
+                                            </p>
 
                                             <!-- Precios -->
                                             <!-- Hover box element Microsoft partener-->
@@ -507,28 +515,17 @@
                                                     <span class="hb-circle"></span>
                                                     <!-- Hover icon -->
                                                     <!-- Title -->
-                                                    <h3>Precio</h3>
+                                                    <h3>Precios del proyecto web</h3>
                                                     <!--/ Title -->
                                                     <!-- Description -->
-                                                    <p>
-                                                        Desde xxx€ hasta xxx€
-
-                                                    </p>
+                                                    <p>Desde 8 hasta 60 apartados (páginas) en el sitio web – <strong>Desde 1.300€ a 8.000€</strong></p>
+                                                    <p>Más de 60 apartados – <strong>A consultar</strong></p>
                                                     <!--/ Description -->
                                                 </a>
                                                 <!--/ Link box with background color -->
                                             </div>
                                             <!--/ Hover box element Microsoft Partner-->
                                             <!-- /Precio -->
-
-                                            <p>
-                                                Utilizamos las últimas tecnologias web para adaptar su web a cualquier dispositivo y obtener la
-                                                mejor experiencia de usuario y funcionalidad.
-                                            </p>
-                                            <p>
-                                                Si necesita una plataforma para vender sus productos o servicios online, también diseñamos y
-                                                creamos su ecommerce ideal.
-                                            </p>
                                         </div>
                                         <!--/ Description -->
 
@@ -559,13 +556,10 @@
                                                 <span class="hb-circle"></span>
                                                 <!-- Hover icon -->
                                                 <!-- Title -->
-                                                <h3>Precio</h3>
+                                                <h3>CRM FlexyGo</h3>
                                                 <!--/ Title -->
                                                 <!-- Description -->
-                                                <p>
-                                                    Desde xxx€ hasta xxx€
-
-                                                </p>
+                                                <p>Mantenimiento: <strong>125€ usuario/año</strong></p>
                                                 <!--/ Description -->
                                             </a>
                                             <!--/ Link box with background color -->
@@ -598,12 +592,11 @@
                                                 <span class="hb-circle"></span>
                                                 <!-- Hover icon -->
                                                 <!-- Title -->
-                                                <h3>Precio</h3>
+                                                <h3>Precios de la solución</h3>
                                                 <!--/ Title -->
                                                 <!-- Description -->
                                                 <p>
-                                                    Desde xxx€ hasta xxx€
-
+                                                    Planes de pago fijo – <strong>Desde 20€/mes hasta 350€/mes</strong>
                                                 </p>
                                                 <!--/ Description -->
                                             </a>
@@ -651,13 +644,26 @@
                                                 <span class="hb-circle"></span>
                                                 <!-- Hover icon -->
                                                 <!-- Title -->
-                                                <h3>Precio</h3>
+                                                <h3>Precios de la solución</h3>
                                                 <!--/ Title -->
                                                 <!-- Description -->
-                                                <p>
-                                                    Desde xxx€ hasta xxx€
-
-                                                </p>
+                                                <p>Mantenimiento</p>
+                                                <ul style="columns: 2;">
+                                                    <li>anual 1-3 usuarios: <strong>545€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 7-10 usuarios:  <strong>350€/usuario</strong></li>
+                                                    <li>anual 11-20 usuarios: <strong>315€/usuario</strong></li>
+                                                    <li>anual 21-30 usuarios: <strong>275€/usuario</strong></li>
+                                                    <li>anual  31-50 usuarios: <strong>250€/usuario</strong></li>
+                                                    <li>anual 51-70 usuarios: <strong>230€/usuario</strong></li>
+                                                    <li>anual 71-100 usuarios: <strong>200€/usuario</strong></li>
+                                                    <li>anual 101-130 usuarios: <strong>180€/usuario</strong></li>
+                                                    <li>anual 131-200 usuarios: <strong>170€/usuario</strong></li>
+                                                    <li>anual 201-500 usuarios: <strong>150€/usuario</strong></li>
+                                                </ul>
                                                 <!--/ Description -->
                                             </a>
                                             <!--/ Link box with background color -->
@@ -683,7 +689,7 @@
                                             automático de facturas, según una frecuencia definida por el usuario.
                                         </p>
                                         <p>
-                                            La aplicacion funciona con AHORA ERP, un potente ERP para pequeñas empresas que se adapta a sus necesidades.
+                                            <b>La aplicacion funciona con AHORA ERP</b>, un potente ERP para pequeñas empresas que se adapta a sus necesidades.
                                         </p>
                                         <!--/ Description -->
                                         <!-- Precios -->
@@ -695,13 +701,26 @@
                                                 <span class="hb-circle"></span>
                                                 <!-- Hover icon -->
                                                 <!-- Title -->
-                                                <h3>Precio</h3>
+                                                <h3>Ahora ERP</h3>
                                                 <!--/ Title -->
                                                 <!-- Description -->
-                                                <p>
-                                                    Desde xxx€ hasta xxx€
-
-                                                </p>
+                                                <p>Mantenimiento</p>
+                                                <ul style="columns: 2;">
+                                                    <li>anual 1-3 usuarios: <strong>545€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 4-6 usuarios: <strong>460€/usuario</strong></li>
+                                                    <li>anual 7-10 usuarios:  <strong>350€/usuario</strong></li>
+                                                    <li>anual 11-20 usuarios: <strong>315€/usuario</strong></li>
+                                                    <li>anual 21-30 usuarios: <strong>275€/usuario</strong></li>
+                                                    <li>anual  31-50 usuarios: <strong>250€/usuario</strong></li>
+                                                    <li>anual 51-70 usuarios: <strong>230€/usuario</strong></li>
+                                                    <li>anual 71-100 usuarios: <strong>200€/usuario</strong></li>
+                                                    <li>anual 101-130 usuarios: <strong>180€/usuario</strong></li>
+                                                    <li>anual 131-200 usuarios: <strong>170€/usuario</strong></li>
+                                                    <li>anual 201-500 usuarios: <strong>150€/usuario</strong></li>
+                                                </ul>
                                                 <!--/ Description -->
                                             </a>
                                             <!--/ Link box with background color -->
@@ -725,23 +744,21 @@
 
                                         <p><b>Flexygo</b> es una potente plataforma low-code para el desarrollo ágil de aplicaciones web y móvil con tecnología de despliegue continuo y filosofía DevOps.</p>
                                         <p>Si buscas una aplicacion online a tu medida nosotros podemos hacer una con Flexygo para cualquier necesidad de tu empresa. Ademas flexygo tiene la posibilidad de <b>conectarse a diferentes aplicaciones:</b> ERP como SAGE o AHORA, Office365, MailChimp, PowerBi y mas.</p>
-
+                                        <p>Gestion de documentos, recursos humanos, control de presencia, logistica, planificadores,organigramas. Flexygo se puede adaptar a cualquiera de tus necesidades.</p>
                                         <!-- Precios -->
                                         <!-- Hover box element Microsoft partener-->
-                                        <div class="hover-box-2 alignright">
+                                        <div class="hover-box-2">
                                             <!-- Link box with background color-->
                                             <a style="color: whitesmoke; background-color: #34495e;" class="hover-box hover-box-3">
                                                 <!-- Hover icon -->
                                                 <span class="hb-circle"></span>
                                                 <!-- Hover icon -->
                                                 <!-- Title -->
-                                                <h3>Precio</h3>
+                                                <h3>FlexyGo a Medida</h3>
                                                 <!--/ Title -->
                                                 <!-- Description -->
-                                                <p>
-                                                    Desde xxx€ hasta xxx€
-
-                                                </p>
+                                                <p>Servicios desde <strong>1500€ a 40.000€</strong> dependiente de las horas de dedicación.</p>
+                                                <p>Mantenimiento desde <strong>20€/usuario/mes a 180€</strong> para todos los usuarios con la licencia Full Users.</p>
                                                 <!--/ Description -->
                                             </a>
                                             <!--/ Link box with background color -->
@@ -749,9 +766,8 @@
                                         <!--/ Hover box element Microsoft Partner-->
                                         <!-- /Precio -->
 
-                                        <p>Gestion de documentos, recursos humanos, control de presencia, logistica, planificadores,organigramas. Flexygo se puede adaptar a cualquiera de tus necesidades.</p>
 
-                                        <div class="pt-120 tbk-symbol--border">
+                                        <div class="pt-40 tbk-symbol--border">
                                             <div class="tbk__symbol">
                                                 <span></span>
                                             </div>
@@ -777,13 +793,15 @@
                                                     <span class="hb-circle"></span>
                                                     <!-- Hover icon -->
                                                     <!-- Title -->
-                                                    <h3>Precio</h3>
+                                                    <h3>Tarifas Sebastian</h3>
                                                     <!--/ Title -->
                                                     <!-- Description -->
-                                                    <p>
-                                                        Desde xxx€ hasta xxx€
-
-                                                    </p>
+                                                    <ul>
+                                                        <li><strong>50</strong> Euros mes hasta 50 usuarios</li>
+                                                        <li><strong>100</strong> Euros mes hasta 100 Usuarios</li>
+                                                        <li><strong>220</strong> Euros mes hasta 200 Usuarios</li>
+                                                        <li>A partir de 200 usuarios 0,8 Euros por usuario adicional</li>
+                                                    </ul>
                                                     <!--/ Description -->
                                                 </a>
                                                 <!--/ Link box with background color -->
