upadte precio flexygo kitdigital

--- a/httpdocs/kit-digital.html
+++ b/httpdocs/kit-digital.html
@@ -757,8 +757,8 @@
                                                 <h3>FlexyGo a Medida</h3>
                                                 <!--/ Title -->
                                                 <!-- Description -->
-                                                <p>Servicios desde <strong>1500€ a 40.000€</strong> dependiente de las horas de dedicación.</p>
-                                                <p>Mantenimiento desde <strong>20€/usuario/mes a 180€</strong> para todos los usuarios con la licencia Full Users.</p>
+                                                <p>Servicios desde <strong>1.500€ a 40.000€</strong> dependiendo de las horas de dedicación.</p>
+                                                <p>Mantenimiento desde <strong>20€/usuario/mes a 180€/mes</strong> para todos los usuarios con la licencia Full Users.</p>
                                                 <!--/ Description -->
                                             </a>
                                             <!--/ Link box with background color -->
