--- a/httpdocs/irongate-techservices.html
+++ b/httpdocs/irongate-techservices.html
@@ -203,12 +203,12 @@
 														
 														<li class="menu-item-has-children col-sm-3"><a href="#" class="zn_mega_title">Consultoria Empresarial</a>
 															<ul class="clearfix">
-																<li><a href="http://canovasescuderoabogados.com/" target="_blank" rel="external">Procesos de negocio</a></li>
-																<li><a href="http://canovasescuderoabogados.com/" target="_blank" rel="external">Planes Estratégicos</a></li>
-																<li><a href="http://canovasescuderoabogados.com/" target="_blank" rel="external">Transformación Digital</a></li>
-																<li><a href="http://canovasescuderoabogados.com/" target="_blank" rel="external">Dirección de Proyectos</a></li>
-																<li><a href="http://canovasescuderoabogados.com/" target="_blank" rel="external">Auditorías de seguridad</a></li>
-																<li><a href="http://canovasescuderoabogados.com/" target="_blank" rel="external">Auditorías ISO27001</a></li>
+																<li><a href="consultoria.html">Procesos de negocio</a></li>
+																<li><a href="consultoria.html">Planes Estratégicos</a></li>
+																<li><a href="consultoria.html">Transformación Digital</a></li>
+																<li><a href="consultoria.html">Dirección de Proyectos</a></li>
+																<li><a href="consultoria.html">Auditorías de seguridad</a></li>
+																<li><a href="consultoria.html">Auditorías ISO27001</a></li>
 																
 															</ul>
 														</li>
