--- a/httpdocs/consultoria.html
+++ b/httpdocs/consultoria.html
@@ -385,7 +385,7 @@
 								<p>Por este motivo, ponemos a tu disposición a profesionales cualificados y con una
 									larga experiencia en el sector para que te acompañen y asesoren en todas las fases
 									del proceso.</p>
-								<p>Le asesoramos en todo el proceso de puesta en marcha de cualquier software
+								<p>Te asesoramos en todo el proceso de puesta en marcha de cualquier software
 									informático.</p>
 								<p>Nuestro equipo está en constante formación y evolución para ofrecerle las mejores
 									soluciones a sus necesidades de identidad corpororativa.</p>
@@ -478,7 +478,7 @@
 										<p>
 											El objetivo de esta consultoría, aunque muchos empresarios crean lo
 											contrario, es un ahorro significativo de los costes humanos a la hora de
-											realizar la elección de una herramienta. Dispondrá de una documentación a
+											realizar la elección de una herramienta. Dispondras de una documentación a
 											entregar a los distintos fabricantes de un software en el que se explica el
 											funcionamiento de la empresa, así como sus procesos críticos. El impacto
 											conseguido es muy positivo, puesto que tanto las demostraciones como los
@@ -611,7 +611,6 @@
 											de forma más
 											acertada, obteniendo finalmente un proyecto con los costes controlados y sin
 											sorpresas.
-											En resumen, el ROI obtenido es óptimo.
 										</p>
 									</div>
 									<!--/ Description -->
