arreglado menu de consultoria

--- a/httpdocs/consultoria.html
+++ b/httpdocs/consultoria.html
@@ -219,11 +219,8 @@
 													<ul class="clearfix">
 														<li><a href="consultoria.html">Procesos de negocio</a></li>
 														<li><a href="consultoria.html">Planes Estratégicos</a></li>
-														<li><a href="consultoria.html">Transformación Digital</a></li>
-														<li><a href="consultoria.html">Dirección de Proyectos</a></li>
-														<li><a href="consultoria.html">Auditorías de seguridad</a></li>
-														<li><a href="consultoria.html">Auditorías ISO27001</a></li>
-
+														<li><a href="consultoria.html">Dirección de Proyectos</a></li>																
+														<li><a href="kit-digital.html">Transformación Digital</a></li>
 													</ul>
 												</li>
 
